Adicionar layout responsivo

--- a/assets/sass/layout/_destaques.scss
+++ b/assets/sass/layout/_destaques.scss
@@ -3,7 +3,7 @@ section#projetos-em-destaque {
 	position: relative;
 	display: table;
 	padding: 50px 0 100px 0;
-	background: linear-gradient(to bottom, #f0f0f0 0%, #f0f0f0 50%, #f0f0f0 50%, white 50%, white 100%);
+	background: linear-gradient(to bottom, #f0f0f0 0%, #f0f0f0 50%, #f0f0f0 50%, #fff 50%, #fff 100%);
 
 	.item {
 		position: relative;
